misc fixes Side menu changed - link order + Home redirect to landing vote-button changes - opposite button is greyed out on voting text changes for suggestion & media cards Navbar button from signup - login login buttons changed to app-warn color size of more-less reduced from 200 to 150 reps list UI changes to be LHS aligned + have tag headings as default rep form max values for position from 25-50 and 500-1000 for description + loading bar implemented grid-card UI changes - less height for title and margin removed

--- a/src/app/auth/verify/verify.component.scss
+++ b/src/app/auth/verify/verify.component.scss
@@ -37,7 +37,7 @@
 }
 
 .verify-button {
-    background-color: #f0932b;
+    background-color: mat-color($app-warn);
     color: rgb(36, 35, 35);
 }
 
