--- a/src/app/reps/list/reps-list.component.scss
+++ b/src/app/reps/list/reps-list.component.scss
@@ -27,7 +27,7 @@
 }
 
 .container {
-  padding: 0.5rem;
+  padding: 1rem;
 }
 
 .no-margin {
