--- a/src/app/shared/more-less/more-less.component.scss
+++ b/src/app/shared/more-less/more-less.component.scss
@@ -1,5 +1,9 @@
 .span-container {
 	overflow: hidden;
+
+	p {
+		margin: 0 !important;
+	}
 }
 
 .fade {
